Fix bug #26639 (mb_convert_variables() clutters variables beyond the references)