ext/mbstring/mbstring.c
@@ -2605,9 +2605,13 @@ detect_end:
 							string.len = Z_STRLEN_PP(hash_entry);
 							ret = mbfl_buffer_converter_feed_result(convd, &string, &result);
 							if (ret != NULL) {
-								STR_FREE(Z_STRVAL_PP(hash_entry));
-								Z_STRVAL_PP(hash_entry) = (char *)ret->val;
-								Z_STRLEN_PP(hash_entry) = ret->len;
+								if ((*hash_entry)->refcount > 1) {
+									ZVAL_DELREF(*hash_entry);
+									MAKE_STD_ZVAL(*hash_entry);
+								} else {
+									zval_dtor(*hash_entry);
+								}
+								ZVAL_STRINGL(*hash_entry, ret->val, ret->len, 0);
 							}
 						}
 					}
@@ -2617,9 +2621,8 @@ detect_end:
 				string.len = Z_STRLEN_PP(var);
 				ret = mbfl_buffer_converter_feed_result(convd, &string, &result);
 				if (ret != NULL) {
-					STR_FREE(Z_STRVAL_PP(var));
-					Z_STRVAL_PP(var) = (char *)ret->val;
-					Z_STRLEN_PP(var) = ret->len;
+					zval_dtor(*var);
+					ZVAL_STRINGL(*var, ret->val, ret->len, 0);
 				}
 			}
 		}
